--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ src="img_more/rmarkdown.png" style="width:6.0%" />
 ---
 
 
-
 class: inverse, center, middle
 # Divide y reinarás...
 
@@ -170,7 +169,7 @@ Dependiendo de la información que tengamos y del tipo de documento, tendrá má
 
 --
 
-- El primer elemento es el alias a ese documento. En este caso *debarsy_2010*, es nombre de auto y año y será como lo citemos a lo largo del documento. 
+- El primer elemento es el alias a ese documento. En este caso *debarsy_2010*, es nombre de autor/a y año y será como lo citemos a lo largo del documento. 
 
 ---
 # Gestores de referencias
@@ -594,7 +593,7 @@ Aquí se analiza la variable 'r params$variable ' , que presenta una media de ' 
 &lt;br&gt;&lt;br&gt;
 --
 
-En el departamento de 'r params$depto' hay ' r  sum(base$departamento == params$dpto) ' casos ...
+En el departamento de 'r params$depto' hay ' r  sum(base$departamento == params$depto) ' casos ...
 
 
 ---
@@ -726,6 +725,17 @@ Con la librería **bookdown** tendremos un inicio rápido a una estructura de se
 - O por consola con: *bookdown:::bookdown_skeleton('tu-libro-dir')*
 &lt;br&gt;&lt;br&gt;
 -Más detalles [aquí](https://bookdown.org/yihui/bookdown/)
+
+---
+# tesisdown
+
+Para cerrar esta presentación, haciendo honor al título del curso, mencionaremos algunos repositorios, con maquetas para tesis:
+
+- [tesisdown](https://github.com/ismayc/thesisdown)
+&lt;br&gt;&lt;br&gt;
+- [tesisfacsodown](https://github.com/juancarloscastillo/tesisfacsodown)
+&lt;br&gt;&lt;br&gt;
+- [udelartex](https://github.com/LaTeXUy/UdelaRTeX)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
